admin/stats: Make graduation & major bar charts
This commit updates the visualization to make the graduation and major
statistics bar charts, as opposed to pie charts.

--- a/alumni/templates/stats/index.html
+++ b/alumni/templates/stats/index.html
@@ -65,20 +65,24 @@
         <div id='degree'></div>
     </div>
     <div>
+        <p class="uk-h3">College</p>
+        <div id='college'></div>
+    </div>
+</div>
+
+<div class="uk-grid uk-child-width-1-1">
+
+    <div>
         <p class="uk-h3">Graduation</p>
         <div id='graduation'></div>
     </div>
 
     <div>
-        <p class="uk-h3">College</p>
-        <div id='college'></div>
-    </div>
-    <div>
         <p class="uk-h3">Major</p>
         <div id='major'></div>
     </div>
-    
 </div>
+
 
 <p class="uk-h2">Misc</p>
 <div class="uk-grid uk-child-width-1-2@m">
