--- a/alumni/templates/admin/alumni/alumni/change_form.html
+++ b/alumni/templates/admin/alumni/alumni/change_form.html
@@ -29,14 +29,23 @@
 <li>
     <a href="{% url 'approval_approval' id=original.profile.id %}" target="_blank">Manage Approval</a>
 </li>
+<li>&nbsp;</li>
+{% if original.profile.googleassociation_set.exists %}
 <li>
-    <a href="{% url 'impersonate-start' uid=original.profile.id %}" target="_blank">Impersonate</a>
+    <a href="https://admin.google.com/ac/users/{{ original.profile.googleassociation_set.first.google_user_id }}"
+        target="_blank">View on Google Admin</a>
 </li>
+{% endif %}
 {% if original.membership and original.membership.customer %}
 <li>
     <a href="https://dashboard.stripe.com/{% if stripe_test_mode %}test/{% endif%}customers/{{ original.membership.customer }}"
         target="_blank">View on Stripe Dashboard</a>
 </li>
 {% endif %}
+<li>&nbsp;</li>
+<li>
+    <a href="{% url 'impersonate-start' uid=original.profile.id %}" target="_blank">Impersonate</a>
+</li>
+<li>&nbsp;</li>
 {{ block.super }}
 {% endblock %}
