--- a/donations/templates/donations/success.html
+++ b/donations/templates/donations/success.html
@@ -1,3 +1,19 @@
-Donate Success! Danke schön
+{% extends "base/base.html" %}
+{% load uikit_tags %}
 
-{{ object }}
+{% block content %}
+<div class="uk-clearfix">
+    <h1>Thank you for supporting our cause!</h1>
+    <h2>Your donation enables our continued work.</h2>
+    {% if object.completed %}
+        <p>Your payment has been processed. Check your email for instructions on acquiring a donation receipt.</p>
+    {% else %}
+        <p>
+            Once your payment is fully processed, we will let you know.
+            {% if object.target %}
+                Your donation towards {{ object.target.label }} will be taken into consideration regardless.
+            {% endif %}
+        </p>
+    {% endif %}
+</div>
+{% endblock %}
