--- a/donation_receipts/templates/donation_receipts/donationreceipt_form.html
+++ b/donation_receipts/templates/donation_receipts/donationreceipt_form.html
@@ -5,6 +5,6 @@
     <form class="uk-form-horizontal" method="POST">
         {% csrf_token %}
         {{ form | as_uikit_form }}
-        <input type="submit" class="uk-button uk-button-primary" value="Save">
+        <input type="submit" class="uk-button uk-button-primary" value="Confirm">
     </form>
 {% endblock %}
