--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -7,15 +7,48 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Donate To The Alumni Association</h1>
-    <div id="total_donations">
-        (Donations So Far: ???)
-    </div>
-    <form class="uk-form-horizontal" method="POST">
-        {% csrf_token %}
-        {{ form | as_uikit_form }}
-        <input type="submit" class="uk-button uk-button-primary" value="Save">
-    </form>
+    <h1>Support Tomorrow's Alumni</h1>
+    <div class="uk-grid">
+        <div class="uk-width-1-3">
+            <div class="uk-card uk-card-default">
+                <div class="uk-card-header">
+                    <h3 class="uk-card-title">Support Our Cause</h3>
+                </div>
+                <div class="uk-card-body">
+                    <ul class="reasons">
+                        <li>Fund the Alumni Scholarship</li>
+                        <li>Tax-deductable in Germany</li>
+                        <li>Audited non-profit</li>
+                        <li>Payment secured using Stripe</li>
+                    </ul>
+                </div>
+            </div>
+            <div><br /></div>
+
+            <div class="uk-card uk-card-default">
+                <div class="uk-card-header">
+                    <h3 class="uk-card-title">Live Donations</h3>
+                </div>
+                <div class="uk-card-body">
+                    <ol id="current-donations"></ol>
+                </div>
+                <div class="uk-card-footer">
+                    <div>
+                        <span class="circle"></span>
+                        <span id="total-donations"></span>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div>
+            <form class="uk-form-horizontal" method="POST">
+                {% csrf_token %}
+                {{ form | as_uikit_form }}
+                <input type="submit" class="uk-button uk-button-primary" value="Donate">
+            </form>
+        </div>
+    </div
 {% endblock %}
 
 {% block extrascripts %}
