--- a/donations/templates/donations/success.html
+++ b/donations/templates/donations/success.html
@@ -7,6 +7,8 @@
     {% endif %}
 {% endblock %}
 
+{% block title %}Thank You{% endblock %}
+
 {% block content %}
     <div class="uk-clearfix">
         <h1>Thank You</h1>
