--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -6,13 +6,40 @@
 {% render_entrypoint "donate__form" "css" %}
 {% endblock %}
 
+{% block title %}Support Tomorrow's Alumni{% endblock %}
+
 {% block content %}
     <h1>Support Tomorrow's Alumni</h1>
+    <div class="uk-text">
+        <p>
+            Our association relies solely on volunteer work and donations. 
+            Your generous donations enable our work.
+            Join our mission to support three talented students every year.
+            Give back by funding the Alumni Scholarship.
+            <a href="https://go.jacobs-alumni.de/scholarship-receivers/">Read more</a> about the latest recipients.
+        </p>
+    </div>
     <div class="uk-grid">
-        <div class="uk-width-1-3">
+        <div class="uk-width-1-1 uk-width-2-3@m">
+            {% if not request.user.is_authenticated %}
+            <div class="uk-alert-primary uk-alert">
+                Members: Please <a href="{% url 'login' %}">log in</a> to use saved cards.
+            </div>
+            {% endif %}
+            <form class="uk-form-horizontal" method="POST">
+                {% csrf_token %}
+                {{ form | as_uikit_form }}
+
+                <input type="submit" class="uk-button uk-button-primary uk-width-1-1 uk-hidden@m" value="Donate">
+                <input type="submit" class="uk-button uk-button-primary uk-float-right uk-visible@m" value="Donate">
+                <p><br /></p>
+            </form>
+        </div>
+
+        <div class="uk-width-1-1 uk-width-1-3@m uk-pull-2-3@m">
             <div class="uk-card uk-card-default">
                 <div class="uk-card-header">
-                    <h3 class="uk-card-title">Support Our Cause</h3>
+                    <h3 class="uk-card-title">Your Benefits</h3>
                 </div>
                 <div class="uk-card-body">
                     <ul class="reasons">
@@ -24,35 +51,24 @@
                 </div>
             </div>
             <div><br /></div>
-
             <div class="uk-card uk-card-default uk-hidden" id="live-display">
                 <div class="uk-card-header">
                     <h3 class="uk-card-title">Live Donations</h3>
                 </div>
                 <div class="uk-card-body">
-                    <ul id="current-donations"></ul>
+                    <h4>Totals Since 2020</h4>
+                    <ul id="donation_totals"></ul>
                 </div>
                 <div class="uk-card-footer">
                     <div>
                         <span class="circle"></span>
-                        <span id="total-donations"></span>
+                        <span id="recent-donation"></span>
                     </div>
                 </div>
             </div>
+        </div>
 
-        </div>
-        <div>
-            <form class="uk-form-horizontal" method="POST">
-                {% csrf_token %}
-                {{ form | as_uikit_form }}
-                <input type="submit" class="uk-button uk-button-primary" value="Donate">
-            </form>
-        </div>
-        <div>
-            <br>
-            <span class="uk-text-meta">Use "," as the decimal separator, i.e. "1.000,23" means 1000 Euros and 23 Cents.</span>
-        </div>
-    </div
+    </div>
 {% endblock %}
 
 {% block extrascripts %}
