--- a/donations/templates/donations/success.html
+++ b/donations/templates/donations/success.html
@@ -20,34 +20,34 @@
                     <h4>You may <a href="{% url 'download' receipt %}">download your receipt</a> now</h4>
                 {# Anonymous users only get one e-mail #}
                 {% else %}
-                    <h3>We've emailed your receipt.</h3>
+                    <h3>We've emailed your donation receipt.</h3>
                 {% endif %}
             {% elif receipt %}
                 {# This case is when the receipt wasn't finalized, but was created #}
-                <h3>We will e-mail your tax receipt once it's ready. You may still <a href="{% url 'receipt-create' object.external_id %}">update your receipt</a>.</h3>
+                <h3>We will e-mail your donation receipt once it's ready. You may still <a href="{% url 'receipt-create' object.external_id %}">update your receipt</a>.</h3>
             {% else %}
                 {% if user.alumni %}
                     {# If we're logged in, but no receipt exists, the user needs to fill in their address. #}
                     {% if not user.alumni.address.is_filled %}
                         <h3>
-                            We tried issuing your receipt, but have no address on file.
+                            We tried issuing your donation receipt, but have no address on file.
                             Please <a href="{% url 'edit_address' %}?next={% url 'donation-detail' object.external_id %}">
                             provide your address</a>.
                         </h3>
                     {% else %}
-                        <h3>If you'd like a receipt, please contact support.</h3>
+                        <h3>If you'd like a donation receipt (for the tax authorities), please contact support.</h3>
                     {% endif %}
                 {% else %}
                     {# These are anonymous users, who may have just donated, or may have come back from an e-mail. #}
                     <h3>
-                        Your payment was successfully processed! If you would like a receipt, please
+                        Your contribution was successfully processed! If you would like a donation receipt (for the tax authorities), please
                         <a href="{% url 'receipt-create' object.external_id %}">provide your address</a>.
                     </h3>
                 {% endif %}
             {% endif %}
         {% else %}
             <h3>
-                Once your payment is fully processed, you'll hear from us by e-mail.
+                Once your contribution is fully processed, you'll hear from us by e-mail.
                 {% if object.target %}
                     Your donation towards {{ object.target.label }} will be taken into consideration regardless.
                 {% endif %}
