Update title to 'Alumni Portal'

--- a/MemberManagement/templates/base/header.html
+++ b/MemberManagement/templates/base/header.html
@@ -29,7 +29,7 @@
                         <img src="{%  static "media/favicon.png" %}" />
                     </span>
                     <span class="uk-visible">
-                      Jacobs Alumni Membership Management
+                      Alumni Portal
                       {% if show_devel_warning %}
                         - <span class="uk-visible" style="color: #f0506e">Testing Site</span>
                       {% endif %}
