--- a/registry/templates/portal/index.html
+++ b/registry/templates/portal/index.html
@@ -1,7 +1,7 @@
 {% extends "base/base.html" %}
 
 {% block title %}Portal{% endblock %}
-{% block pagetitle %}Jacobs Alumni Membership Portal{% endblock %} 
+{% block pagetitle %}Alumni Portal{% endblock %} 
 
 {% block content %}
 <p class="uk-article-lead">
