donations: Link support address

--- a/donations/templates/donations/success.html
+++ b/donations/templates/donations/success.html
@@ -53,6 +53,6 @@
                 {% endif %}
             </h3>
         {% endif %}
-        <p>In case of questions or problems, please contact support@jacobs-alumni.de</p>
+        <p>In case of questions or problems, please contact <a href="mailto:support@jacobs-alumni.de">support@jacobs-alumni.de</a></p>
     </div>
 {% endblock %}
