--- a/donations/templates/emails/donation_complete.html
+++ b/donations/templates/emails/donation_complete.html
@@ -1,9 +1,11 @@
 {% extends "emails/email_base.html" %}
 
 {% block content %}
+    <p>Dear Sir or Madam,</p>
+
     <p>Thank you for your generous contribution to the Alumni Association.</p>
 
-    <p>If you would like to receive a tax receipt, please proceed to <a href="{{ domain }}{% url 'donation-detail' object.external_id %}">fill
+    <p>To generate a tax receipt, please proceed to <a href="{{ domain }}{% url 'donation-detail' object.external_id %}">fill
         your details.</a></p>
 
     <p>
