--- a/donations/templates/emails/donation_complete.html
+++ b/donations/templates/emails/donation_complete.html
@@ -5,7 +5,7 @@
 
     <p>Thank you for your generous contribution to the Alumni Association.</p>
 
-    <p>To generate a tax receipt, please proceed to <a href="{{ domain }}{% url 'donation-detail' object.external_id %}">fill
+    <p>To generate a tax receipt, please proceed to <a href="https://{{ domain }}{% url 'donation-detail' object.external_id %}"> to fill
         your details.</a></p>
 
     <p>
