Update homepage text

--- a/MemberManagement/templates/static/index.html
+++ b/MemberManagement/templates/static/index.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="uk-clearfix">
     <p class="uk-text-lead">
-        In order to become a member of the Association, you need to provide some personal information about yourself, which will require about 10 minutes of your time.
+        In order to become a member of the Association, you need to provide some personal information about yourself, which will require less than 5 minutes.
     </p>
 
     <p>
