Add link to website

--- a/MemberManagement/templates/base/header_menu.html
+++ b/MemberManagement/templates/base/header_menu.html
@@ -6,3 +6,4 @@
 {% if user.is_staff %}<li class="hoverable"><a href="{% url 'admin:index' %}">Django Admin</a></li>{% endif %}
 {% if user.is_impersonate %}<li class="hoverable"><a href="{% url 'impersonate-stop' %}">Stop Impersonating</a></li>{% endif %}
 <li class="hoverable"><a href="{% url 'donate' %}">Donate</a></li>
+<li class="hoverable"><a href="https://jacobs-alumni.de/">Association Website</a></li>
