Remove reference to 'unlimited google drive space'
Because Google now only provides us with a limited limit of storage
space across all users, we can no longer afford to offer users unlimited
storage. This commit removes references to unlimited storage space.

--- a/MemberManagement/templates/static/index.html
+++ b/MemberManagement/templates/static/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <p>
-        Your @jacobs-alumni.de email account is hosted on G Suite and comes with access to various apps as well as unlimited Google Drive space.
+        Your @jacobs-alumni.de email account is hosted on G Suite and comes with access to various apps as well as Google Drive space.
     </p>
     <p>
         Additionally, as a member you will enjoy the following benefits:
