--- a/custom_auth/templates/emails/approval/base.html
+++ b/custom_auth/templates/emails/approval/base.html
@@ -38,7 +38,7 @@
 {% endblock %}
 
 <p>
-    With these credentials, you can both login to your Google account (e.g. for e-mail or your unlimited Google Drive
+    With these credentials, you can both login to your Google account (e.g. for e-mail or your Google Drive
     storage) AND your Alumni Portal account (choose sign in with Google).
 </p>
 
