--- a/MemberManagement/templates/base/header.html
+++ b/MemberManagement/templates/base/header.html
@@ -10,7 +10,10 @@
           <li class="uk-nav-divider"></li>
           <li class="hoverable uk-active">
               {% if user.is_authenticated %}
-              <a href="{% url 'logout' %}">Logout</a>
+              <form method="post" action="{% url 'logout' %}" class="logout-nav-form">
+                {% csrf_token %}
+                <button type="submit" class="logout-nav-link uk-link">Logout</button>
+              </form>
             {% else %}
               <a href="{% url 'register' %}">Register</a>
             {% endif %}
@@ -45,9 +48,10 @@
 
                 <div class="uk-navbar-item uk-visible@l">
                   {% if user.is_authenticated %}
-                    <a href="{% url 'logout' %}" class="uk-button uk-button-primary uk-button-external bg-transparent uk-text-primary">
-                        Logout
-                    </a>
+                    <form method="post" action="{% url 'logout' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="uk-button uk-button-primary uk-button-external bg-transparent uk-text-primary">Logout</button>
+                    </form>
                   {% else %}
                     <a href="{% url 'register' %}" class="uk-button uk-button-primary uk-button-external bg-transparent uk-text-primary">
                       Register
