--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -9,68 +9,68 @@
 {% block title %}Support Tomorrow's Alumni{% endblock %}
 
 {% block content %}
-    <h1>Support Tomorrow's Alumni</h1>
-    <div class="uk-text">
-        <p>
-            Our association relies solely on volunteer work and donations. 
-            Your generous donations enable our work.
-            Join our mission to support three talented students every year.
-            Give back by funding the Alumni Scholarship.
-            <a href="https://go.jacobs-alumni.de/scholarship-receivers/">Read more</a> about the latest recipients.
-        </p>
-    </div>
-    <div class="uk-grid">
-        <div class="uk-width-1-1 uk-width-2-3@m">
-            {% if not request.user.is_authenticated %}
-            <div class="uk-alert-primary uk-alert">
-                Members: Please <a href="{% url 'login' %}">log in</a> to use saved cards.
-            </div>
-            {% endif %}
-            <form class="uk-form-horizontal" method="POST">
-                {% csrf_token %}
-                {{ form | as_uikit_form }}
-
-                <input type="submit" class="uk-button uk-button-primary uk-width-1-1 uk-hidden@m" value="Donate">
-                <input type="submit" class="uk-button uk-button-primary uk-float-right uk-visible@m" value="Donate">
-                <p><br /></p>
-            </form>
+<h1>Support Tomorrow's Alumni</h1>
+<div class="uk-text">
+    <p>
+        Our association relies solely on volunteer work and donations.
+        Your generous donations enable our work.
+        Join our mission to support three talented students every year.
+        Give back by funding the Alumni Scholarship.
+        <a href="https://go.jacobs-alumni.de/scholarship-receivers/">Read more</a> about the latest recipients.
+    </p>
+</div>
+<div class="uk-grid">
+    <div class="uk-width-1-1 uk-width-2-3@m">
+        {% if not request.user.is_authenticated %}
+        <div class="uk-alert-primary uk-alert">
+            Members: Please <a href="{% url 'login' %}">log in</a> to use saved cards.
         </div>
+        {% endif %}
+        <form class="uk-form-horizontal" method="POST">
+            {% csrf_token %}
+            {{ form | as_uikit_form }}
 
-        <div class="uk-width-1-1 uk-width-1-3@m uk-pull-2-3@m">
-            <div class="uk-card uk-card-default">
-                <div class="uk-card-header">
-                    <h3 class="uk-card-title">Your Benefits</h3>
-                </div>
-                <div class="uk-card-body">
-                    <ul class="reasons">
-                        <li>Fund the Alumni Scholarship</li>
-                        <li>Tax-deductable in Germany</li>
-                        <li>Audited non-profit</li>
-                        <li>Payment secured using Stripe</li>
-                    </ul>
-                </div>
+            <input type="submit" class="uk-button uk-button-primary uk-width-1-1 uk-hidden@m" value="Proceed to payment">
+            <input type="submit" class="uk-button uk-button-primary uk-float-right uk-visible@m" value="Proceed to payment">
+            <p><br /></p>
+        </form>
+    </div>
+
+    <div class="uk-width-1-1 uk-width-1-3@m uk-pull-2-3@m">
+        <div class="uk-card uk-card-default">
+            <div class="uk-card-header">
+                <h3 class="uk-card-title">Why Donate?</h3>
             </div>
-            <div><br /></div>
-            <div class="uk-card uk-card-default uk-hidden" id="live-display">
-                <div class="uk-card-header">
-                    <h3 class="uk-card-title">Live Donations</h3>
-                </div>
-                <div class="uk-card-body">
-                    <h4>Totals Since 2020</h4>
-                    <ul id="donation_totals"></ul>
-                </div>
-                <div class="uk-card-footer">
-                    <div>
-                        <span class="circle"></span>
-                        <span id="recent-donation"></span>
-                    </div>
-                </div>
+            <div class="uk-card-body">
+                <ul class="reasons">
+                    <li>Fund the Alumni Scholarship</li>
+                    <li>Tax-deductable in Germany</li>
+                    <li>Audited non-profit</li>
+                    <li>Payment secured using Stripe</li>
+                </ul>
             </div>
         </div>
-
+        <div><br /></div>
+        <div class="uk-card uk-card-default uk-hidden" id="live-display">
+            <div class="uk-card-header">
+                <h3 class="uk-card-title">Live Donations</h3>
+            </div>
+            <div class="uk-card-body">
+                <h4>Totals Since 2020</h4>
+                <ul id="donation_totals"></ul>
+            </div>
+            <div class="uk-card-footer">
+                <div>
+                    <span class="circle"></span>
+                    <span id="recent-donation"></span>
+                </div>
+            </div>
+        </div>
     </div>
+
+</div>
 {% endblock %}
 
 {% block extrascripts %}
-    {% render_entrypoint "donate__form" "js" %}
+{% render_entrypoint "donate__form" "js" %}
 {% endblock %}
